software-center (2.1.17.1) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - use the system-wide proxy instead of the gnome
      one by default (LP: #628823)

  [ Kiwinote ]
  * software-center:
    - import Decimal before we need it as a workaround for (LP: #607705)
      (testcase: LANGUAGE=tr_TR LC_ALL=tr_TR.utf8 ./software-center)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 10:03:41 +0200

software-center (2.1.17) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchasedialog.py:
    - make popup window a modal dialog so it works with
      metacity too (LP: #625398)
  * softwarecenter/view/softwarepane.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py
    softwarecenter/view/installedpane.py,
    test/test_appview.py:
    - factor show/hide nonapps functionality up to the
      SoftwarePane base class, cleanup redundant code
    - enable show/hide nonapps in the "Provided by Ubuntu"
      subitem of "Installed Software" per updated spec
      (LP: #556375) 
    - add test for show/hide nonapps
  * softwarecenter/backend/channel.py:
    - small fix in debug code

  [ Michael Vogt ]
  * merged lp:~mpt/software-center/basic-css, improves the
    style of the purchase dialog (thanks!)
  * merged lp:~mmcg069/software-center/small-fixes that fixes
    minor drawing error with the paging dot drawing outside its 
    allocated area (thanks!)
  * merged lp:~mpt/software-center/help-3.0 (thanks!)
  * softwarecenter/gwibber_helper.py:
    - to find out if gwibber has accounts setup, poke around in
      gconf instead of doing a dbus call. The dbus call will trigger
      a gwibber start on each s-c start

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - set action_bar.pkg_state as well as local state 
      (LP: #629230, LP: #632889)
      this means that the button will always take the right action