@@ -9,6 +9,10 @@ software-center (2.1.17.1) UNRELEASED; urgency=low
   * software-center:
     - import Decimal before we need it as a workaround for (LP: #607705)
       (testcase: LANGUAGE=tr_TR LC_ALL=tr_TR.utf8 ./software-center)
+  * softwarecenter/apt/apthistory.py:
+    - use ascii_lower() rather than lower()
+      much thanks to M. Vefa Bicakci via bug 581207
+      (testcase: LANGUAGE=tr_TR LC_ALL=tr_TR.utf8 ./software-center)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 10:03:41 +0200
 
